--- a/page_web/index.html
+++ b/page_web/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tokyo hotel</title>
+    <script src="../assets/frontend.js" defer></script>
 </head>
 <body>
-    <input class="input_hotel" type="text" placeholder="nom_hotel">
-    <input class="input_hotel" type="text" placeholder="city_hotel">
+    <input id="input_nom_hotel" type="text" placeholder="nom_hotel">
+    <input id="input_city_hotel" type="text" placeholder="city_hotel">
 
     <br>
-    <input class="input_hotel" type="text" placeholder="adress_hotel">
-    <input class="input_hotel" type="text" placeholder="reference_hotel">
+    <input id="input_adress_hotel" type="text" placeholder="adress_hotel">
+    <input id="input_reference_hotel" type="text" placeholder="reference_hotel">
     <br>
     <button id="button">ajout</button>
 </body>
